Fix image size on mobile (?)

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -603,5 +603,5 @@ div.introduction{
 }
 
 .chapter-text img {
-  width: 100%;
+  width: 100vw;
 }
